# opencode-rs

./: .gitignore  10x.sh  AGENTS.md  ANALYSIS.md  ARCHITECTURE_ISSUES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  TUI_PRD_Rust.md  append_tests.sh  build.sh  clippy_warnings.txt  findings.md  implement-prd.sh  install.sh  iterate-prd.sh  iterate_prd.py  opencode.json  progress.md  task_plan.md  test-report-tui.md
opencode-rust/: Cargo.toml  README.md  TEST_MAPPING.md  clippy.toml  clippy_warnings.txt  deny.toml  opencode_tools.long-type-16140589253630861872.txt
opencode-rust/.config/: nextest.toml
opencode-rust/.githooks/: pre-commit  pre-push
opencode-rust/.github/workflows/: ci.yml
opencode-rust/crates/acp/: Cargo.toml
opencode-rust/crates/acp/src/: cli.rs  client.rs  lib.rs  protocol.rs
opencode-rust/crates/acp/tests/: acp_tests.rs
opencode-rust/crates/agent/: Cargo.toml
opencode-rust/crates/agent/src/: agent.rs  build_agent.rs  debug_agent.rs  delegation.rs  events.rs  explore_agent.rs  general_agent.rs  lib.rs  plan_agent.rs  refactor_agent.rs  review_agent.rs  runtime.rs  system_agents.rs
opencode-rust/crates/agent/tests/: agent_delegation_tests.rs  agent_integration.rs  agent_tests.rs  agent_visibility_tests.rs  subagent_exec_tests.rs
opencode-rust/crates/auth/: Cargo.toml
opencode-rust/crates/auth/src/: credential_ref.rs  credential_store.rs  jwt.rs  lib.rs  manager.rs  oauth.rs  password.rs
opencode-rust/crates/auth/tests/: auth_e2e_tests.rs  oauth_browser_tests.rs
opencode-rust/crates/cli/: Cargo.toml
opencode-rust/crates/cli/src/: env_parser.rs  lib.rs  main.rs  webview.rs
opencode-rust/crates/cli/tests/: account_tests.rs  cli_commands.rs  cli_contract.rs  cli_signal_tests.rs  common.rs  completion.rs  e2e_core_flow.rs  e2e_desktop_web_smoke.rs  e2e_file_management.rs  e2e_github_integration.rs  e2e_model_visibility.rs  e2e_model_workflows.rs  e2e_plugin.rs  e2e_projects_workspace.rs  e2e_prompt_async.rs  e2e_run_command.rs  e2e_session_persistence.rs  e2e_session_sharing.rs  e2e_session_undo_redo.rs  e2e_session_workflows.rs  e2e_settings_workflows.rs  e2e_sharing_modes.rs  e2e_sidebar.rs  e2e_terminal_workflows.rs  (+2 more)
opencode-rust/crates/config/: Cargo.toml
opencode-rust/crates/core/: Cargo.toml
opencode-rust/crates/file/: Cargo.toml
opencode-rust/crates/format/: Cargo.toml
opencode-rust/crates/git/: Cargo.toml
opencode-rust/crates/llm/: Cargo.toml
opencode-rust/crates/logging/: Cargo.toml
opencode-rust/crates/lsp/: Cargo.toml  LSP.md
opencode-rust/crates/permission/: Cargo.toml
opencode-rust/crates/plugin/: Cargo.toml  README.md
opencode-rust/crates/runtime/: Cargo.toml
opencode-rust/crates/sdk/: Cargo.toml  README.md
opencode-rust/crates/server/: Cargo.toml
opencode-rust/crates/storage/: Cargo.toml  sqlite::memory:
opencode-rust/crates/tools/: Cargo.toml
opencode-rust/crates/tui/: Cargo.toml
opencode-rust/crates/util/: Cargo.toml
opencode-rust/docs/: ARCHITECTURE.md  CONFIG.md  CONTRIBUTING.md  sdk-guide.md
opencode-rust/integration_tests/: Cargo.toml
opencode-rust/integration_tests/src/: lib.rs
opencode-rust/opencode-benches/: Cargo.toml
opencode-rust/opencode-benches/benches/: config_and_token.rs  jsonc_parsing.rs  llm_roundtrip.rs  plugin_operations.rs  session_load.rs  session_operations.rs  storage_operations.rs  tool_execution.rs
opencode-rust/opencode-benches/src/: config_and_token.rs  jsonc_parsing.rs  lib.rs  llm_roundtrip.rs  plugin_operations.rs  session_load.rs  session_operations.rs  storage_operations.rs  tool_execution.rs
opencode-rust/ratatui-testing/: Cargo.toml
opencode-rust/ratatui-testing/src/: action.rs  cli.rs  dialog_tester.rs  diff.rs  dsl.rs  input.rs  lib.rs  pty.rs  reducer.rs  snapshot.rs  state.rs  tui_harness.rs  tui_workflow.rs
opencode-rust/ratatui-testing/tests/: buffer_diff_tests.rs  dialog_tests.rs  dsl_integration_tests.rs  dsl_tests.rs  integration_tests.rs  pty_tests.rs  snapshot_tests.rs  state_tests.rs  tui_workflow_example.rs
opencode-rust/test-reports/: coverage-output.txt  test-output.txt  unit-test-output.txt
opencode-rust/tests/: Cargo.toml  integration_infrastructure.rs
opencode-rust/tests/src/: acp_e2e_tests.rs  acp_transport_tests.rs  agent_execute_api_tests.rs  agent_llm_tests.rs  agent_switch_tests.rs  agent_tool_tests.rs  api_key_flow.rs  copilot_oauth_flow.rs  event_emitter_tests.rs  google_oauth_flow.rs  lib.rs  lsp_diagnostics_tests.rs  mcp_protocol_tests.rs  parameterized_tests.rs  permission_integration_tests.rs  phase6_regression_tests.rs  plugin_hook_tests.rs  security_tests.rs  session_lifecycle_tests.rs  status_endpoint_tests.rs  streaming_response_tests.rs  test_websocket.rs  tool_registry_audit_tests.rs  ws_streaming_tests.rs  xmodule_tests.rs
ratatui-testing/: Cargo.toml  README.md
ratatui-testing/.github/workflows/: test.yml
ratatui-testing/examples/: counter.rs
ratatui-testing/src/: config.rs  diff.rs  dsl.rs  lib.rs  state.rs
ratatui-testing/tests/: integration.rs  pty_input_mock.rs  pty_simple.rs  pty_tests.rs  visual_regression.rs
rust-opencode-port/: Cargo.toml  README.md  TEST_MAPPING.md
rust-opencode-port/.github/workflows/: ci.yml
rust-opencode-port/crates/agent/: Cargo.toml
rust-opencode-port/crates/auth/: Cargo.toml
rust-opencode-port/crates/cli/: Cargo.toml
rust-opencode-port/crates/control-plane/: Cargo.toml
rust-opencode-port/crates/core/: Cargo.toml
rust-opencode-port/crates/git/: Cargo.toml
rust-opencode-port/crates/llm/: Cargo.toml
rust-opencode-port/crates/lsp/: Cargo.toml
rust-opencode-port/crates/mcp/: Cargo.toml
rust-opencode-port/crates/permission/: Cargo.toml
rust-opencode-port/crates/plugin/: Cargo.toml
rust-opencode-port/crates/sdk/: Cargo.toml
rust-opencode-port/crates/server/: Cargo.toml
rust-opencode-port/crates/storage/: Cargo.toml
rust-opencode-port/crates/tools/: Cargo.toml
rust-opencode-port/crates/tui/: Cargo.toml
rust-opencode-port/tests/: Cargo.toml
rust-opencode-port/tests/src/: agent_llm_tests.rs  lib.rs
(+2093 files in other folders)
