[package]
name = "ratatui-testing"
version = "0.1.0"
edition = "2021"
description = "A comprehensive testing framework for Rust TUI applications"
license = "MIT"
repository = "https://github.com/yourorg/ratatui-testing"
authors = ["Your Name <your@email.com>"]
keywords = ["tui", "testing", "terminal", "ratatui", "snapshot"]
categories = ["development-tools::testing", "command-line-utilities"]

[dependencies]
# TUI rendering and input
ratatui = { version = "0.26", optional = true }
crossterm = "0.27"

# Snapshot testing
insta = { version = "1.39", optional = true }

# PTY testing
portable-pty = { version = "0.8", optional = true }
expectrl = { version = "0.3", optional = true }

# CLI testing
assert_cmd = { version = "2.0", optional = true }
predicates = { version = "3.1", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
futures = "0.3"
once_cell = "1.19"
regex = "1.10"

[dev-dependencies]
# All optional dependencies for testing
ratatui = "0.26"
crossterm = "0.27"
insta = "1.39"
portable-pty = "0.8"
expectrl = "0.3"
assert_cmd = "2.0"
predicates = "3.1"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["full"]
full = [
    "dep:ratatui",
    "dep:insta",
    "dep:portable-pty",
    "dep:expectrl",
    "dep:assert_cmd",
    "dep:predicates",
    "dep:tokio",
]

# Individual feature flags
ratatui = ["dep:ratatui"]
insta = ["dep:insta"]
pty = ["dep:portable-pty", "dep:expectrl"]
cli = ["dep:assert_cmd", "dep:predicates"]
async = ["dep:tokio"]

[lib]
name = "ratatui_testing"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
