[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/llm",
    "crates/tools",
    "crates/tui",
    "crates/agent",
    "crates/lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenCode Rust Team"]
license = "MIT"
repository = "https://github.com/anomalyco/opencode-rs"

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

opencode-core = { path = "crates/core" }
opencode-llm = { path = "crates/llm" }
opencode-tools = { path = "crates/tools" }
opencode-tui = { path = "crates/tui" }
opencode-agent = { path = "crates/agent" }
opencode-lsp = { path = "crates/lsp" }
