[package]
name = "opencode-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
opencode-core = { path = "../crates/core" }
opencode-tools = { path = "../crates/tools" }
opencode-storage = { path = "../crates/storage" }
criterion = "0.5"
tokio = { version = "1.45", features = ["full"] }
tempfile = "3"

[[bench]]
name = "session_operations"
harness = false
path = "benches/session_operations.rs"

[[bench]]
name = "tool_execution"
harness = false
path = "benches/tool_execution.rs"