[package]
name = "opencode-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
opencode-core = { path = "../crates/core" }
opencode-tools = { path = "../crates/tools" }
opencode-storage = { path = "../crates/storage" }
opencode-plugin = { path = "../crates/plugin" }
criterion = "0.5"
tokio = { version = "1.45", features = ["full"] }
tempfile = "3"
serde_json = "1"

[[bench]]
name = "session_operations"
harness = false
path = "benches/session_operations.rs"

[[bench]]
name = "tool_execution"
harness = false
path = "benches/tool_execution.rs"

[[bench]]
name = "storage_operations"
harness = false
path = "benches/storage_operations.rs"

[[bench]]
name = "config_and_token"
harness = false
path = "benches/config_and_token.rs"

[[bench]]
name = "plugin_operations"
harness = false
path = "benches/plugin_operations.rs"