[package]
name = "opencode-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
opencode-core = { path = "../crates/core" }
opencode-tools = { path = "../crates/tools" }
opencode-storage = { path = "../crates/storage" }
opencode-plugin = { path = "../crates/plugin" }
criterion = "0.5"
tokio = { version = "1.45", features = ["full"] }
tempfile = "3"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
jsonc-parser = { version = "0.32", features = ["serde"] }
chrono = "0.4"

[[bench]]
name = "session_operations"
harness = false
path = "benches/session_operations.rs"

[[bench]]
name = "tool_execution"
harness = false
path = "benches/tool_execution.rs"

[[bench]]
name = "storage_operations"
harness = false
path = "benches/storage_operations.rs"

[[bench]]
name = "config_and_token"
harness = false
path = "benches/config_and_token.rs"

[[bench]]
name = "jsonc_parsing"
harness = false
path = "benches/jsonc_parsing.rs"