[package]
name = "ratatui-testing"
version = "0.1.0"
edition = "2021"
authors = ["OpenCode Rust Team"]
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8"
tokio = { version = "1.45", features = ["rt-multi-thread", "sync", "time", "macros", "process", "io-util"] }
tracing = "0.1"
tempfile = "3.14"

[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
tracing-subscriber = "0.3"