[package]
name = "opencode-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
opencode-llm.workspace = true
opencode-tools.workspace = true
opencode-tui.workspace = true
opencode-agent.workspace = true
opencode-server.workspace = true
opencode-storage.workspace = true
opencode-mcp.workspace = true
opencode-lsp.workspace = true
opencode-plugin.workspace = true
opencode-control-plane.workspace = true
opencode-permission.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
chrono.workspace = true
indexmap.workspace = true
actix-web = { workspace = true }
actix-rt = "2"

[[test]]
name = "ws_streaming_tests"
path = "src/ws_streaming_tests.rs"

[[test]]
name = "status_endpoint_tests"
path = "src/status_endpoint_tests.rs"

[[test]]
name = "streaming_response_tests"
path = "src/streaming_response_tests.rs"

[[test]]
name = "permission_integration_tests"
path = "src/permission_integration_tests.rs"

[[test]]
name = "security_tests"
path = "src/security_tests.rs"

[[test]]
name = "agent_tool_tests"
path = "src/agent_tool_tests.rs"

[[test]]
name = "parameterized_tests"
path = "src/parameterized_tests.rs"

[[test]]
name = "benchmark_regression_tests"
path = "src/benchmark_regression_tests.rs"

[[test]]
name = "api_key_flow"
path = "src/api_key_flow.rs"

[[test]]
name = "google_oauth_flow"
path = "src/google_oauth_flow.rs"

[[test]]
name = "copilot_oauth_flow"
path = "src/copilot_oauth_flow.rs"

[[test]]
name = "test_websocket"
path = "src/test_websocket.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
actix-ws = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-channel = "0.3"
rstest.workspace = true
