[package]
name = "opencode-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
opencode-llm.workspace = true
opencode-tools.workspace = true
opencode-tui.workspace = true
opencode-agent.workspace = true
opencode-server.workspace = true
opencode-storage.workspace = true
opencode-mcp.workspace = true
opencode-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
chrono.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
