[package]
name = "opencode-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "opencode-rs"
path = "src/main.rs"

[lib]
name = "opencode_cli"
path = "src/lib.rs"

[features]
default = []
desktop = ["dep:wry", "dep:webkit2gtk"]

[dependencies]
opencode-core.workspace = true
opencode-config.workspace = true
opencode-llm.workspace = true
opencode-git.workspace = true
opencode-plugin = { path = "../plugin" }
opencode-server = { path = "../server" }
opencode-storage = { workspace = true }
opencode-tui.workspace = true
opencode-mcp.workspace = true
opencode-auth = { path = "../auth" }
opencode-control-plane = { path = "../control-plane" }
opencode-acp = { path = "../acp" }
opencode-permission = { path = "../permission" }
opencode-tools.workspace = true
opencode-agent = { path = "../agent" }
opencode-util.workspace = true
clap = { version = "4.5", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
dirs = "6"
directories = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
once_cell = "1.19"
chrono.workspace = true
reqwest.workspace = true
base64 = "0.22"
sha2 = "0.10"
uuid.workspace = true
async-trait = "0.1"
which = "7"
similar = "2"

[target.'cfg(target_os = "macos")'.dependencies]
wry = { version = "0.24", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wry = { version = "0.24", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
wry = { version = "0.24", optional = true }
webkit2gtk = { version = "0.18", optional = true }

[dev-dependencies]
temp-env = "0.2"
tempfile = "3"
regex = "1"
