[package]
name = "opencode-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
directories = "6.0"
dirs = "6"
dirs-next.workspace = true
walkdir.workspace = true
sha2.workspace = true
regex.workspace = true
jsonc-parser.workspace = true
glob = "0.3"
globset = "0.4"
jsonschema = "0.28"
toml = "0.5"
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
