[package]
name = "opencode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
directories = "6.0"
toml = "0.8"
walkdir.workspace = true
dirs = "6"
dirs-next.workspace = true
rusqlite.workspace = true
regex = "1"
glob = "0.3"
jsonschema = "0.28"
opencode-permission = { path = "../permission" }
opencode-config = { path = "../config" }
notify = "6"
globset = "0.4"
sha2 = "0.10"
tiktoken-rs.workspace = true
jsonc-parser.workspace = true
aes-gcm.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
