[package]
name = "opencode-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-config.workspace = true
opencode-core.workspace = true
opencode-tools.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
glob = "0.3"
which = "7"
tempfile.workspace = true

[dev-dependencies]
tokio-test = "0.4"