[package]
name = "opencode-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core = { path = "../core" }
git2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
urlencoding = "2.1"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"