[package]
name = "opencode-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
experimental-variant-reasoning = []
