[package]
name = "opencode-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
tui = ["ratatui"]

[dependencies]
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
ratatui = { version = "0.28", optional = true }

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true