[package]
name = "opencode-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures = "0.3"
tower-lsp = "0.20"
lsp-types = "0.95"
parking_lot = "0.12"
which = "4.4"
tempfile = "3.8"
