[package]
name = "opencode-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libloading = "0.8"
wasmtime = "25"
wasmtime-wasi = "25"
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
