[package]
name = "opencode-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libloading = "0.8"
wasmtime = "36"
wasmtime-wasi = "36"
wasmi = "0.13"
wasmi_core = "0.13"
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
opencode-permission = { workspace = true }
opencode-tools.workspace = true
opencode-core.workspace = true
indexmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
wat = "1"
