[package]
name = "opencode-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
opencode-agent.workspace = true
opencode-core.workspace = true
opencode-storage.workspace = true
opencode-llm.workspace = true

[dev-dependencies]
tempfile.workspace = true
