[package]
name = "opencode-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
opencode-agent.workspace = true
opencode-core.workspace = true
opencode-storage.workspace = true
opencode-llm.workspace = true
opencode-tools.workspace = true
opencode-permission.workspace = true

[dev-dependencies]
tempfile.workspace = true
