[package]
name = "opencode-sdk"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license = "MIT"
description = "Rust SDK for OpenCode RS - Programmatic access to OpenCode capabilities"
repository = "https://github.com/anomalyco/opencode-rs"
documentation = "https://docs.rs/opencode-sdk"
readme = "README.md"
keywords = ["opencode", "sdk", "ai", "coding"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

# URL handling
url = "2"

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "async_session"
path = "examples/async_session.rs"

[[example]]
name = "tool_execution"
path = "examples/tool_execution.rs"

[lib]
name = "opencode_sdk"
crate-type = ["rlib"]

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]