[package]
name = "opencode-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
built = { version = "0.5", default-features = false, features = ["chrono", "semver"] }

[dependencies]
opencode-core = { path = "../core" }
opencode-storage = { path = "../storage" }
opencode-llm = { path = "../llm" }
opencode-mcp = { path = "../mcp" }
opencode-control-plane = { path = "../control-plane" }
opencode-tools = { path = "../tools" }
opencode-agent = { path = "../agent" }
opencode-permission = { path = "../permission" }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-web-lab = { workspace = true }
actix-files = "0.6"
actix-rt = "2"
actix-ws = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
mdns-sd = "0.11"
rand = "0.8"
base64 = "0.22"
regex-lite = "0.1"
url = "2"
utoipa = "5"
utoipa-actix-web = "0.1"

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
