[package]
name = "opencode-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { workspace = true }
async-trait = { workspace = true }
deadpool = { workspace = true }
deadpool-sqlite = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"