[package]
name = "opencode-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
opencode-logging = { workspace = true }
opencode-permission = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
walkdir = "2.5"
regex = "1.11"
glob = "0.3"
base64 = "0.22"
dirs = "6"
tracing = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"