[package]
name = "opencode-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
opencode-llm.workspace = true
opencode-auth = { path = "../auth" }
opencode-mcp = { path = "../mcp" }
opencode-lsp = { path = "../lsp" }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = "0.13"
syntect = "5"
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid = "1"
ansi-to-tui = "8.0"
dirs = "5"
ignore = "0.4"
fuzzy-matcher = "0.3"
tokio-tungstenite = "0.26"
tracing.workspace = true
regex = "1"
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
