[package]
name = "opencode-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand.workspace = true
anyhow.workspace = true
walkdir.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"