[package]
name = "opencode-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core = { path = "../core" }
opencode-storage = { path = "../storage" }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
