[package]
name = "opencode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
directories = "6.0"
toml = "0.8"
walkdir = "2.5"
dirs = "6"
rusqlite = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
